# geodetic_measurement_app

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.sh  run_tests.sh
scripts/: bootstrap.sh  run_app.sh  run_tests.sh
scripts/windows/: build_exe.bat  build_exe.ps1
src/geodetic_app/: __init__.py  app.py
src/geodetic_app/calculations/: __init__.py  atmospheric_corrections.py  em_wave_refraction.py  engine.py  environmental_effects.py  horizontal_distance.py
src/geodetic_app/exports/: __init__.py  exporters.py
src/geodetic_app/models/: __init__.py  app_state.py  device_config.py  measurement.py
src/geodetic_app/services/: __init__.py  connection_service.py  protocol_parser.py
src/geodetic_app/ui/: main_window.py
src/geodetic_app/ui/tabs/: _shared.py  advanced_tabs.py  arc_vs_chord_tab.py  atmospheric_correction_tab.py  connection_tab.py  export_tab.py  inklinacja_tab.py  kollimacja_tab.py  ng0_tab.py  rab_code_tab.py  text_file_load_tab.py
tests/integration/: test_pipeline.py
tests/unit/: test_calculations.py  test_connection_service.py
