[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geodetic-measurement-app"
version = "0.1.0"
description = "Desktop app for geodetic measurement error and correction calculations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "pandas>=2.2",
    "numpy>=2.0",
    "bleak>=0.22",
    "pyserial>=3.5",
    "reportlab>=4.2",
    "pypdf>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.4",
    "ruff>=0.6",
]

[project.scripts]
geodetic-app = "geodetic_app.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "unit: fast unit tests",
    "integration: integration tests",
    "gui: GUI tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
